feat(fsharp): finsih through problem 9

--- a/fsharp/fsharp.fsproj
+++ b/fsharp/fsharp.fsproj
@@ -47,6 +47,9 @@
     <Compile Include="Four.fs" />
     <Compile Include="Five.fs" />
     <Compile Include="Six.fs" />
+    <Compile Include="Seven.fs" />
+    <Compile Include="Eight.fs" />
+    <Compile Include="Nine.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
