feat(fsharp): problems 10 through 12

--- a/fsharp/fsharp.fsproj
+++ b/fsharp/fsharp.fsproj
@@ -50,9 +50,10 @@
     <Compile Include="Seven.fs" />
     <Compile Include="Eight.fs" />
     <Compile Include="Nine.fs" />
+    <Compile Include="Ten.fs" />
+    <Compile Include="Eleven.fs" />
+    <Compile Include="Twelve.fs" />
     <Compile Include="Program.fs" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(FSharpTargetsPath)" />
